--- a/gdal/debian/rules
+++ b/gdal/debian/rules
@@ -1,3 +1,11 @@
 #!/usr/bin/make -f
+# -*- makefile -*-
+
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
+
 %:
 	dh $@
+
+override_dh_auto_configure:
+	dh_auto_configure -- --without-ld-shared --disable-shared --enable-static --with-ogdi=no
