Rename source package to ogr2ogr2 to avoid conflicts

--- a/gdal/debian/control
+++ b/gdal/debian/control
@@ -1,4 +1,4 @@
-Source: gdal2
+Source: ogr2ogr2
 Section: science
 Priority: extra
 Maintainer: Debian GIS Project <pkg-grass-devel@lists.alioth.debian.org>
