--- a/gdal/debian/rules
+++ b/gdal/debian/rules
@@ -15,4 +15,6 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 	mkdir -p debian/tmp/usr/bin
+	mkdir -p debian/tmp/usr/share/gdal/2.0
 	cp apps/ogr2ogr debian/tmp/usr/bin/ogr2ogr2
+	cp data/* debian/tmp/usr/share/gdal/2.0
